# EDA

./: COMPARAR_LOS_NOMBRES_DE_1_CARPETA_Y_UN_SHAPE.ipynb  README.md  pyproject.toml
src/EDA/: __init__.py  compare_names.py  pyproject.toml
src/compare_names_folder_vs_shape/: __init__.py  io_utils.py  pipeline.py
tests/: test_compare_names.py
