[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-names-folder-vs-shape"
version = "0.1.0"
description = "Comparar nombres de archivos SVG con atributos de shapefiles."
readme = "README.md"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "geopandas>=0.14",
  "pandas>=2.2",
  "fiona>=1.9",
  "shapely>=2.0"
]

[project.urls]
Homepage = "https://github.com/Xboster-eliel/EDA"
Issues   = "https://github.com/Xboster-eliel/EDA/issues"

[tool.setuptools]
package-dir = { "" = "src" }           # Cambia "src" si renombraste la carpeta

[tool.setuptools.packages.find]
where = ["src"]                        # <-- único bloque, sin duplicados
include = ["compare_names_folder_vs_shape*"]
exclude = ["tests*"]

